# augur-os

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
docs/: architecture-autoloops.md  architecture-commands.md  architecture-dashboard.md  architecture-llm-wiki.md  architecture-mcp-gateway.md  architecture-overview.md  creating-skills.md  developer-guide.md  getting-started.md  user-guide.md
docs/guides/: installation-windows.md
tests/: test_public_positioning.py
